@@ -884,5 +884,3 @@ O quiza que salte al menu con la linea de opcion seleccionada donde corresponde
 
 -comentar desensamblado copion9
 
--modificaciones bit 6 puerto FEH segun issue teclado. modificaciones segun inves
-tener en cuenta afectacion con cinta en play y sin play
